--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "Create pipelines, chains and sequences of functions with ease.",
   "license": "GPL-3.0-only",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npx only-allow pnpm",
+    "build": "pnpm test && pnpm run build:clean && pnpm run build:js",
+    "build:clean": "rimraf dist",
+    "build:js": "rollup -c",
+    "test": "vitest run --config vitest.config.ts --",
+    "watch": "vitest --config vitest.config.ts --",
+    "coverage": "vitest run --coverage",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": {
@@ -14,5 +20,27 @@
     "name": "Aurian Aubert",
     "url": "https://auaust.ch"
   },
-  "packageManager": "pnpm@8.15.4"
+  "packageManager": "pnpm@8.15.4",
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.13.0",
+    "rollup-plugin-ts": "^3.4.5",
+    "typescript": "^5.4.2",
+    "vitest": "^1.4.0"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/esm/index.d.ts",
+      "default": "./dist/cjs/index.js"
+    }
+  }
 }
