meta: add publish script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run --config vitest.config.ts --",
     "watch": "vitest --config vitest.config.ts --",
     "coverage": "vitest run --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "echo 'Typechecking...' && tsc --noEmit",
+    "publish": "pnpm build && changeset publish"
   },
   "keywords": [],
   "author": {
@@ -27,6 +28,7 @@
     "@babel/preset-env": "^7.24.0",
     "@changesets/cli": "^2.27.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "@vitest/coverage-v8": "^1.4.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.13.0",
     "rollup-plugin-ts": "^3.4.5",
