--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,14 +32,13 @@ jobs:
 
       - name: Build & Test
         run: |
-          pnpm run build
-          pnpm run test
+          pnpm build
+          pnpm test
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
-          version: pnpm changeset version
-          publish: pnpm run publish
+          publish: pnpm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
